# forge-meta-link

./: .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
scripts/: Dockerfile.arm64-deb  build-wizard.cmd  build-wizard.mjs  build-wizard.ps1  build-wizard.sh
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  database.rs  forge_api.rs  image_decode.rs  image_processing.rs  lib.rs  main.rs  parser.rs  scanner.rs  sidecar.rs
src-tauri/src/commands/: delete.rs  export.rs  forge.rs  queries.rs  scan.rs  shell.rs  sidecar.rs  thumbnails.rs
src-tauri/src/database/: bulk_operations.rs  cursor_queries.rs  read_queries.rs
src/components/: DetailPanel.tsx  Gallery.tsx  PhotoViewer.tsx  SearchBar.tsx  Sidebar.tsx  ToastHost.tsx
src/hooks/: useAppSettings.ts  useForgeSettings.ts  useImages.ts  usePersistedState.ts  useToast.ts
src/services/: commands.ts
src/types/: metadata.ts
src/utils/: imageClipboard.ts
