[package]
name = "forge-meta-link"
version = "0.2.0"
edition = "2021"
description = "High-performance AI image metadata manager"
default-run = "forge-meta-link"

[lib]
name = "forge_meta_link_lib"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "forge-meta-link"
path = "src/main.rs"

[profile.dev]
# Reduce local artifact size for low-space environments.
debug = 0

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
byteorder = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "webp", "gif", "avif"] }
webp = "0.3.1"
rayon = "1.10"
sha2 = "0.10"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
env_logger = "0.11"
walkdir = "2"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
csv = "1"
thiserror = "2"
r2d2 = "0.8"
r2d2_sqlite = "0.25"
serde_yaml = "0.9"
zip = { version = "2", default-features = false, features = ["deflate"] }
base64 = "0.22"
zune-core = "0.5.0"
zune-jpegxl = "0.5.2"
jxl-oxide = { version = "0.12.5", features = ["image"] }
